--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".ApplicationFirebaseAuth"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -12,11 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecipeBook"
         tools:targetApi="31">
-        <activity
-            android:name=".MainScreen"
-            android:exported="false"
-            android:label="@string/title_activity_main_screen"
-            android:theme="@style/Theme.RecipeBook" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
